tests/golden/err-export-unknown-name/expected_error.txt
error: `missing` は `./page` の公開名ではありません
 --> ./_.clum:2:3
  |
2 |   missing
  |   ^^^^^^^ そのファイルが `^` を前置した定義だけを差し出せます
